removed api key

--- a/download-music.ipynb
+++ b/download-music.ipynb
@@ -47,6 +47,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dfd7af5",
+   "metadata": {},
+   "source": [
+    "I tried to get Zotify to automatically download each playlist into a specific folder based on the \"genre\" key. This proved to be unworkable. The orgininal Zotify is no longer supported or working, and the fork I am using has some conflicts. Because of this, I needed to download all my music to my Music folder under [USER] and then manually copy each playlist into its proper \"MusicDB\" folder.\n",
+    "\n",
+    "You can see the zotify settings I used under the [config.json](zotify/config.json) file.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b285ac39",
@@ -65,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e27763",
+   "id": "ac62fba9",
    "metadata": {},
    "outputs": [],
    "source": []
