--- a/download-music.ipynb
+++ b/download-music.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5788b228",
    "metadata": {},
    "outputs": [],
@@ -21,23 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f4cb48d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "playlist_links = {\n",
-    "    \"Pop\": \"https://open.spotify.com/playlist/37i9dQZF1DXcBWIGoYBM5M?si=7d5cafbc061247b7\",\n",
-    "    \"Hip-Hop\": \"https://open.spotify.com/playlist/37i9dQZF1DX0XUsuxWHRQd?si=197362f6edb94b46\",\n",
-    "    \"Classical\": \"https://open.spotify.com/playlist/37i9dQZF1DWWEJlAGA9gs0?si=30b639eb44dd4e89\",\n",
-    "    \"Alt-Rock\": \"https://open.spotify.com/playlist/37i9dQZF1DXcF6B6QPhFDv?si=78ab7f1b9fc74219\",\n",
-    "    \"Classic-Rock\": \"https://open.spotify.com/playlist/37i9dQZF1DWXRqgorJj26U?si=4a5014076e3147fc\",\n",
-    "    \"New-Jazz\": \"https://open.spotify.com/playlist/37i9dQZF1DX7YCknf2jT6s?si=22464a1655f44746\",\n",
-    "    \"Classic-Jazz\": \"https://open.spotify.com/playlist/37i9dQZF1DXbITWG1ZJKYt?si=c095708ded3c4199\",\n",
-    "    \"EDM\": \"https://open.spotify.com/playlist/37i9dQZF1DXbITWG1ZJKYt?si=c095708ded3c4199\",\n",
-    "    \"Country\": \"https://open.spotify.com/playlist/37i9dQZF1DXbITWG1ZJKYt?si=c095708ded3c4199\",\n",
-    "    \"Metal\": \"https://open.spotify.com/playlist/37i9dQZF1DWTcqUzwhNmKv?si=5f294838aee54c21\",\n",
-    "    \"Latin\": \"https://open.spotify.com/playlist/37i9dQZF1DWTcqUzwhNmKv?si=5f294838aee54c21\",\n",
+    "    \"Pop\": \"https://open.spotify.com/playlist/37i9dQZF1DXcBWIGoYBM5M\",\n",
+    "    \"Hip-Hop\": \"https://open.spotify.com/playlist/37i9dQZF1DX0XUsuxWHRQd\",\n",
+    "    \"Classical\": \"https://open.spotify.com/playlist/37i9dQZF1DWWEJlAGA9gs0\",\n",
+    "    \"Alt-Rock\": \"https://open.spotify.com/playlist/37i9dQZF1DXcF6B6QPhFDv\",\n",
+    "    \"Classic-Rock\": \"https://open.spotify.com/playlist/37i9dQZF1DWXRqgorJj26U\",\n",
+    "    \"New-Jazz\": \"https://open.spotify.com/playlist/37i9dQZF1DX7YCknf2jT6s\",\n",
+    "    \"Classic-Jazz\": \"https://open.spotify.com/playlist/37i9dQZF1DXbITWG1ZJKYt\",\n",
+    "    \"EDM\": \"https://open.spotify.com/playlist/37i9dQZF1DXbITWG1ZJKYt\",\n",
+    "    \"Country\": \"https://open.spotify.com/playlist/37i9dQZF1DXbITWG1ZJKYt\",\n",
+    "    \"Metal\": \"https://open.spotify.com/playlist/37i9dQZF1DWTcqUzwhNmKv\",\n",
+    "    \"Latin\": \"https://open.spotify.com/playlist/37i9dQZF1DWTcqUzwhNmKv\",\n",
     "    \"Soul\": \"https://open.spotify.com/playlist/37i9dQZF1DWULEW2RfoSCi\",\n",
     "    \"Blues\": \"https://open.spotify.com/playlist/37i9dQZF1DXd9rSDyQguIk\",\n",
     "    \"Folk\": \"https://open.spotify.com/playlist/37i9dQZF1DXc6IFF23C9jj\",\n",
@@ -68,7 +68,7 @@
     "        # Download each of the playlist links. I'll have to manually move them to my Music-DB folder because Zotify \n",
     "        # does not recognize when it is being told to output to a specific directory. \n",
     "        # It always goes to the Music folder in [USER]\n",
-    "        result = subprocess.run([\"zotify\",  f\"{playlist_links[genre]}\"], capture_output=True, text=True)\n",
+    "        result = subprocess.run([\"zotify\",  \"--download-quality\",\"normal\",f\"{playlist_links[genre]}\"], capture_output=True, text=True)\n",
     "        print(result.stdout)"
    ]
   },
@@ -79,11 +79,42 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6f851911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"zotify_commands.txt\", \"w\") as f:\n",
+    "    for value in playlist_links.values():\n",
+    "        f.write(f\"zotify --download-quality normal {value}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4edaf58e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"dict_values.txt\", \"w\") as f:\n",
+    "    f.write(' '.join(str(value) for value in playlist_links.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8974af3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".conda",
+   "display_name": "Spectro",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
